--- a/styles.css
+++ b/styles.css
@@ -66,9 +66,9 @@ h1, h2 {
 }
 
 .hero {
-    background: url('Photo/Webp.net-resizeimage.jpg') no-repeat center center/cover;
+    background: url('Photo/photo_2025-01-26_15-04-33.jpg') no-repeat center center/cover;
     color: white;
-    padding: 100px 20px;
+    padding: 150px 20px;
     text-align: center;
 }
 
